# HODDIES

./: .gitignore  .readthedocs.yaml  HODDIES_tutorial.ipynb  LICENSE  README.md  hod_dev.py  parameters_HODdefaults.yaml  pinnochio_io.py  pyproject.toml  setup.py
.ipynb_checkpoints/: README-checkpoint.md
HODDIES/: HOD_models.py  _default_HOD_parameters.yaml  _version.py  abacus_func.py  abacus_io.py  basic_HOD_examples.ipynb  default_HOD_parameters.yaml  environment_func.py  fits_functions.py  hod.py  parameters_HODdefaults.yaml  pinnochio_io.py  read_uchuu.py  results_fit.npy  tutorial_Abacus_HOD_on_nersc.ipynb  tutorial_HOD_on_Abacus_at_nersc.ipynb  utils.py
HODDIES.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
HODDIES/.ipynb_checkpoints/: HOD_models-checkpoint.py  abacus_func-checkpoint.py  hod-checkpoint.py  parameters_HODdefaults-checkpoint.yaml  utils-checkpoint.py
HODDIES/HODDIES.egg-info/: PKG-INFO  requires.txt
HODDIES/desi/: QSO_fits.ipynb  Y3_redshift_systematics.py  desi_utils.py  fit_result_LRG_SHOD_6p_AbacusSummit_highbase_c000_ph100_z0.5_wp+xi.npy  hod_fit_examples.ipynb  mock_for_corr_small_boxes.py  parameters_QSO.yaml  results_fit.npy  run_fit_minimizer.sh  run_mcmc.py  run_minimizer.py  run_mock_for_corr.sh  test_fit.npy  test_fit_param.yaml  test_fit_param_copy.yaml
HODDIES/desi/Tuto_hod_minimizer/: example.ipynb  fit_param_ELG.yaml  fit_param_LRG.yaml  fit_param_QSO.yaml  run_fit_minimizer.sh  run_minimizer_desi_hod.py
HODDIES/desi/Uchuu/: preprocees_Uchuu.py  run_preprocess_Uchuu.sh
HODDIES/desi/Unit-fnl/: load_unit_fnl_box.py
docs/: HODDIES.rst  api.rst  conf.py  index.rst  installation.rst  modules.rst  requirements.txt
docs/API/: api.rst
docs/api/: api.rst
docs/user/: installation.rst
nb/: Abacus_LC_examples.ipynb  basic_HOD_examples.ipynb
