[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm>=8",
    'wheel',
    'numpy'
]
build-backend = "setuptools.build_meta"

[project]
name = "HODDIES"
authors = [{name = "Rocher Antoine", email = "antoine.rocher@epfl.ch"},
]
description = "Python toolkit to generate mock galaxy catalogs based on Halo Occupation Distribution (HOD) model"
dependencies = [
    'numpy',
    'matplotlib',
    'mpytools',
    'pycorr',
    'numba',
    'scipy',
    'h5py',
    'scikit-learn',
    'idaes-pse',
]

readme = "README.md"
requires-python = ">=3.10"
urls = {Repository = "https://github.com/antoine-rocher/HODDIES"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
]
dynamic = ["version"]

docs = [
    'sphinx>=4.3.0',
    'sphinx-rtd-theme>=0.5.1',
    'setuptools',
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["HODDIES*"]

[tool.setuptools_scm]
version_file = "HODDIES/_version.py"
version_file_template = '__version__ = "{version}"'

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true