[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "HODDIES"
authors = [{name = "Rocher Antoine", email = "antoine.rocher@epfl.ch"},
]
description = "Python toolkit to generate mock galaxy catalogs based on Halo Occupation Distribution (HOD) model"
dependencies = ['numpy', 'numba', 'scipy','PyYAML', 'mpytools']

readme = "README.md"
requires-python = ">=3.10"
urls = {Repository = "https://github.com/antoine-rocher/HODDIES"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
]
version = "0.1.2"

[project.optional-dependencies]
all = [
    'pycorr @ git+https://github.com/cosmodesi/pycorr',
    'cosmoprimo @ git+https://github.com/cosmodesi/cosmoprimo',
    'scikit-learn',
    'emcee',
    'zeus',
    'idaes-pse',
    'abacusutils[all]',
    'colossus',
]

cosmodesi = ['pycorr @ git+https://github.com/cosmodesi/pycorr', 'cosmoprimo @ git+https://github.com/cosmodesi/cosmoprimo']
fit_tools = ['scikit-learn','emcee','zeus','idaes-pse']
colossus = ['colossus']
abacusutils = ['abacusutils[all]']


[tool.setuptools]
packages = ["HODDIES"]

[tool.setuptools.package-data]
HODDIES = ["default_HOD_parameters.yaml"]


[tool.setuptools.dynamic]
version = {attr = "HODDIES.__version__"}

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

